--- a/model/pom.xml
+++ b/model/pom.xml
@@ -29,7 +29,12 @@
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.9</version>
-		</dependency>		
+		</dependency>
+		<dependency>
+			<groupId>fish.focus.uvms.maven</groupId>
+			<artifactId>uvms-pom-java11-deps</artifactId>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -71,7 +76,7 @@
 			<plugin>
 				<groupId>org.apache.cxf</groupId>
 				<artifactId>cxf-codegen-plugin</artifactId>
-				<version>3.1.13</version>
+				<version>3.3.4</version>
 				<executions>
 					<execution>
 						<id>generate-vessel-module</id>
