--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>fish.focus.uvms.maven</groupId>
         <artifactId>uvms-pom</artifactId>
-        <version>2.1</version>
+        <version>2.4</version>
     </parent>
 
     <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
@@ -21,6 +21,7 @@
         <docker.liquibase.db.passwd>config</docker.liquibase.db.passwd>
         <docker.dev.version>3.40.3.w18</docker.dev.version>
 
+        <fish.focus.parent.version>2.4</fish.focus.parent.version>
         <usm4uvms.version>4.0.23</usm4uvms.version>
         <audit.model.version>4.1.2</audit.model.version>
         <uvms.common.version>4.0.4</uvms.common.version>
@@ -39,31 +40,37 @@
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
                 <artifactId>uvms-pom-gis-deps</artifactId>
-                <version>2.1</version>
+                <version>${fish.focus.parent.version}</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
                 <artifactId>uvms-pom-logging-deps</artifactId>
-                <version>2.1</version>
+                <version>${fish.focus.parent.version}</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
                 <artifactId>uvms-pom-monitoring-deps</artifactId>
-                <version>2.1</version>
+                <version>${fish.focus.parent.version}</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
                 <artifactId>uvms-pom-test-deps</artifactId>
-                <version>2.1</version>
+                <version>${fish.focus.parent.version}</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
                 <artifactId>uvms-pom-arquillian-deps</artifactId>
-                <version>2.1</version>
+                <version>${fish.focus.parent.version}</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>fish.focus.uvms.maven</groupId>
+                <artifactId>uvms-pom-java11-deps</artifactId>
+                <version>${fish.focus.parent.version}</version>
                 <type>pom</type>
             </dependency>
         </dependencies>
