--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <fish.focus.parent.version>3.0</fish.focus.parent.version>
         <usm4uvms.version>4.1.0</usm4uvms.version>
         <audit.model.version>4.2.0</audit.model.version>
-        <uvms.common.version>4.1.1-SNAPSHOT</uvms.common.version>
+        <uvms.common.version>4.1.1</uvms.common.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
