--- a/model/pom.xml
+++ b/model/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>eu.europa.ec.fisheries.uvms.config</groupId>
 		<artifactId>config</artifactId>
-		<version>4.3.4-SNAPSHOT</version>
+		<version>4.3.4</version>
 	</parent>
 
 	<artifactId>config-model</artifactId>
