--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
         <artifactId>config</artifactId>
-        <version>4.3.6</version>
+        <version>4.3.7-SNAPSHOT</version>
     </parent>
     
     <name>${project.parent.artifactId}-domain</name>
