--- a/module/pom.xml
+++ b/module/pom.xml
@@ -42,6 +42,11 @@
                     </modules>
                     <skinnyWars>true</skinnyWars>
                     <defaultLibBundleDir>APP-INF/lib</defaultLibBundleDir>
+                    <archive>
+                        <manifestEntries>
+                            <Logging-Profile>config</Logging-Profile>
+                        </manifestEntries>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
