--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <javaee.version>8.0</javaee.version>
     <uvms.commons.version>${uvms.commonsLibrary.version}</uvms.commons.version>
     <usm4uvms.version>${uvms.uvms4usm.version}</usm4uvms.version>
-    <hibernate.version>5.1.9.Final</hibernate.version>
+    <hibernate.version>5.3.17.Final</hibernate.version>
 
     <project.scm.id>github</project.scm.id>
   </properties>
@@ -40,22 +40,22 @@
   </dependencies>
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>fish.focus.uvms.maven</groupId>
-        <artifactId>uvms-pom-gis-deps</artifactId>
-        <version>1.21</version>
-        <type>pom</type>
-        <exclusions>
-          <exclusion>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
+      <!--<dependency>-->
+        <!--<groupId>fish.focus.uvms.maven</groupId>-->
+        <!--<artifactId>uvms-pom-gis-deps</artifactId>-->
+        <!--<version>1.21</version>-->
+        <!--<type>pom</type>-->
+        <!--<exclusions>-->
+          <!--<exclusion>-->
+            <!--<groupId>org.hibernate</groupId>-->
+            <!--<artifactId>hibernate-core</artifactId>-->
+          <!--</exclusion>-->
+          <!--<exclusion>-->
+            <!--<groupId>org.hibernate</groupId>-->
+            <!--<artifactId>hibernate-entitymanager</artifactId>-->
+          <!--</exclusion>-->
+        <!--</exclusions>-->
+      <!--</dependency>-->
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
@@ -64,6 +64,11 @@
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
+        <version>${hibernate.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-spatial</artifactId>
         <version>${hibernate.version}</version>
       </dependency>
       <dependency>
