--- a/model/pom.xml
+++ b/model/pom.xml
@@ -31,6 +31,7 @@
 			<groupId>fish.focus.uvms.maven</groupId>
 			<artifactId>uvms-pom-java11-deps</artifactId>
 			<type>pom</type>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
