--- a/rest/src/main/webapp/WEB-INF/web.xml
+++ b/rest/src/main/webapp/WEB-INF/web.xml
@@ -22,4 +22,13 @@
         <url-pattern>/rest/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>AuthorizationFilter</filter-name>
+        <filter-class>eu.europa.ec.fisheries.uvms.rest.security.AuthorizationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthorizationFilter</filter-name>
+        <url-pattern>/rest/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
