--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -42,6 +42,10 @@
 				    <groupId>net.sf.ehcache</groupId>
   					<artifactId>ehcache</artifactId>				
 				</exclusion>
+                <exclusion>
+                    <groupId>fish.focus.uvms.maven</groupId>
+                    <artifactId>uvms-pom-logging-deps</artifactId>
+                </exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
