--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -8,6 +8,7 @@
     </parent>
     
     <artifactId>config-liquibase</artifactId>
+    <packaging>pom</packaging>
     <name>liquibase</name>
 
     <properties>
@@ -130,6 +131,21 @@
 							</execution>
 						</executions>
 					</plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <goals>
+                            <goal>deploy-file</goal>
+                        </goals>
+                        <configuration>
+                            <packaging>zip</packaging>
+                            <generatePom>true</generatePom>
+                            <artifactId>${project.artifactId}</artifactId>
+                            <groupId>${project.groupId}</groupId>
+                            <version>${project.version}</version>
+                            <file>target/${project.artifactId}.zip</file>
+                        </configuration>
+                    </plugin>
 				</plugins>
 			</build>
 			<properties>
@@ -213,10 +229,8 @@
                         <goal>deploy-file</goal>
                     </goals>
                     <configuration>
-                        <!-- <repositoryId>${repository.id}</repositoryId> -->
                         <packaging>zip</packaging>
                         <generatePom>true</generatePom>
-                        <!-- <url>${repository.url}</url> -->
                         <artifactId>${project.artifactId}</artifactId>
                         <groupId>${project.groupId}</groupId>
                         <version>${project.version}</version>
